FluigentHardwareUpdated/log/Hamamatsu&MFCSApp_log_191119_190802.txt
2019-11-19T19:08:02|CRITICAL|root|Unhandled exception:Traceback (most recent call last):
  File "C:\Users\Admin\Desktop\MFCS_python_old\Camera&PumpApp.py", line 181, in <module>
    app = HamamatsuApp(sys.argv)
  File "C:\Users\Admin\Desktop\MFCS_python_old\Camera&PumpApp.py", line 24, in __init__
    super().__init__(*kwds) # *kwds is needed since in the main we pass as argument sys.argv. Without
  File "C:\ProgramData\Anaconda3\lib\site-packages\ScopeFoundry\base_app.py", line 332, in __init__
    self.setup()
  File "C:\Users\Admin\Desktop\MFCS_python_old\Camera&PumpApp.py", line 136, in setup
    from PumpHardware import MFCSHardware
  File "C:\Users\Admin\Desktop\MFCS_python_old\PumpHardware.py", line 18
    unit = 'mbar', initial = 0, vmin = 0, vmax = 25, reread_from_hardware_after_write = True)
                  ^
SyntaxError: keyword argument repeated

